k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kuberntes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - awesomecloudservice.digital
        - www.awesomecloudservice.digital
      secretName: udemy-course-secret
  ingressClassName: nginx
  rules:
  - host: awesomecloudservice.digital
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: client-cluster-ip-service
            port:
              number: 3000
      - pathType: Prefix
        path: /api/
        backend:
          service:
            name: server-cluster-ip-service
            port:
              number: 5000
  - host: www.awesomecloudservice.digital
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: client-cluster-ip-service
            port:
              number: 3000
      - pathType: Prefix
        path: /api/
        backend:
          service:
            name: server-cluster-ip-service
            port:
              number: 5000
